--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  
     <div id="RD">
 <div class="imga">
-    <img src="assets/Division.svg" class="wow animate__fadeInLeft" data-wow-offset="10" data-wow-iteration="1"
+    <img src="assets/Divi.svg" class="wow animate__fadeInLeft" data-wow-offset="10" data-wow-iteration="1"
         data-wow-delay="1s" width="400px" height="auto" alt="">
     <img src="assets/To theMoon.png" data-wow-delay="1.5s"  class="wow animate__fadeInRight" width="300px" height="auto" alt="">
 </div>
