--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="1s">
                 <img src="assets/Asset 15.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Digital</p>
                 </div>
                 <a href=""> <i>Play</i></a>
             </div>
-            <span class="wow animate__fadeIn" data-wow-delay="1.5s">Canales</span>
+            <!-- <span class="wow animate__fadeIn" data-wow-delay="1.5s">Canales</span> -->
             <div class="cont-item wow animate__fadeIn" data-wow-delay="1.8s">
                 <img src="assets/Asset 7.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"><i>Atlas</i> </h3>
                     <p class="star">Social</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -118,7 +118,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="2s">
                 <img src="assets/Asset 11.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Front</h3>
+                    <h3 class="neo"> <i>Front</i> </h3>
                     <p class="star">App</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -126,7 +126,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="2.5s">
                 <img src="assets/Asset 9.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Casper</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -134,7 +134,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="3s">
                 <img src="assets/Asset 10.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Go</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -142,7 +142,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="3.5s">
                 <img src="assets/Asset 8.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Pay</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -156,7 +156,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="1s">
                 <img src="assets/Asset 12.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Journey</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -165,7 +165,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="1.8s">
                 <img src="assets/Asset 13.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Mining</p>
                 </div>
                 <a href=""> <i>Play</i></a>
@@ -173,7 +173,7 @@
             <div class="cont-item wow animate__fadeIn" data-wow-delay="2s">
                 <img src="assets/Asset 14.svg" width="120px" alt="">
                 <div class="text">
-                    <h3 class="neo">Atlas</h3>
+                    <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Projection</p>
                 </div>
                 <a href=""> <i>Play</i></a>
