--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Go</p>
                 </div>
-                <a  type="button"  data-toggle="modal" data-target="#exampleModal"  onclick="videoM('assets/video/Atlas Go.mp4','350px','Atlas Go')"> <i>Play</i></a>
+                <a    data-toggle="modal" data-target="#exampleModal"  onclick="videoM('assets/video/Atlas Go.mp4','350px','Atlas Go')"> <i>Play</i></a>
             </div>
             <div class="cont-item wow animate__fadeIn" data-wow-delay="2.5s">
                 <img src="assets/Asset 9.svg" width="120px" alt="">
@@ -188,7 +188,7 @@
                     <h3 class="neo"> <i>Atlas</i> </h3>
                     <p class="star">Projection</p>
                 </div>
-                <a   type="button"  data-toggle="modal" data-target="#exampleModal" onclick="videoM('assets/video/Atlas Projection.webm','100%','Atlas Projection')" > <i>Play</i></a>
+                <a     data-toggle="modal" data-target="#exampleModal" onclick="videoM('assets/video/Atlas Projection.webm','100%','Atlas Projection')" > <i>Play</i></a>
             </div>
 
         </div>
@@ -246,9 +246,9 @@
 
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
     Launch demo modal
-</button>
+</button> -->
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
